--- a/src/components/developerPage/developerPage.styles.scss
+++ b/src/components/developerPage/developerPage.styles.scss
@@ -80,7 +80,6 @@
   box-shadow: 0vh 0.5vh 2vh 0vh #dc274393;
   font-size: 1.5vh;
   color: white;
-  font-weight: 700;
   transition: top ease 0.5s;
   cursor: pointer;
 }
@@ -106,7 +105,6 @@
   box-shadow: 0vh 0.5vh 2vh 0vh rgba(51, 51, 51, 0.442);
   font-size: 1.5vh;
   color: white;
-  font-weight: 700;
   transition: top ease 0.5s;
   cursor: pointer;
 }
@@ -144,4 +142,32 @@
   -webkit-user-select: none;
   -khtml-user-select: none;
   user-select: none;
+}
+@font-face {
+  font-family: "BMDOHYEON";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+p {
+  font-family: "BMDOHYEON";
+}
+h1 {
+  font-family: "BMDOHYEON";
+}
+h2 {
+  font-family: "BMDOHYEON";
+}
+h3 {
+  font-family: "BMDOHYEON";
+}
+h4 {
+  font-family: "BMDOHYEON";
+}
+h5 {
+  font-family: "BMDOHYEON";
+}
+h6 {
+  font-family: "BMDOHYEON";
 }
