--- a/src/routes/question/question.styles.scss
+++ b/src/routes/question/question.styles.scss
@@ -1,13 +1,15 @@
 .question-background {
   height: 100vh;
-  background-color: #d6cbbd;
+  background-image: url("../../assets/bg4.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: block;
 }
 
 .question-box {
   width: 90vw;
   height: 60vh;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(240, 240, 240, 0);
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -15,8 +17,6 @@
   border-radius: 4vh;
   padding-top: 50px;
   padding-bottom: 50px;
-  box-shadow: 0vh 2vh 3vh 0vh rgba(0, 0, 0, 0.2);
-  animation: biggerBox 0.5s ease-in-out 0s 1 normal forwards;
 }
 .question-container {
   opacity: 0;
@@ -34,70 +34,48 @@
   margin-bottom: 5vh;
 }
 .question-paragraph {
-  color: black;
-  font-size: 2vh;
-  text-align: center;
-  margin-bottom: 5vh;
-  margin-left: 5vw;
-  margin-right: 5vw;
+  height: 20vh;
+  display: flex;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  margin: 2vw;
+  border-radius: 2.2vh;
+  border-width: 0px;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size: 1.5vh;
+  color: #000000;
   word-break: keep-all;
+  transition: top ease 0.5s;
+  cursor: pointer;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .answers-container {
   text-align: center;
+  display: flex;
+  flex-direction: row;
 }
 .button-answer {
-  width: 90%;
-  height: 10vh;
-  margin-bottom: 3vh;
-  padding-left: 5vw;
-  padding-right: 5vw;
+  width: 100%;
+  height: 25vh;
+  padding-left: 1vw;
+  padding-right: 1vw;
+  margin: 2vw;
   justify-content: center;
   align-items: center;
-  border-radius: 2vh;
+  border-radius: 2.2vh;
   border-width: 0px;
-  background-color: rgb(240, 240, 240);
-  border-color: #8b0029;
-  box-shadow: -0.6vh -0.6vh 1.4vh rgba(255, 255, 255, 0.7),
-    -0.6vh -0.6vh 1vh rgba(255, 255, 255, 0.5),
-    0.6vh 0.6vh 0.8vh rgba(255, 255, 255, 0.075),
-    0.6vh 0.6vh 1vh rgba(0, 0, 0, 0.15);
-  font-size: 1.8vh;
-  color: #8b0029;
-  font-weight: 700;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size: 1.5vh;
+  color: #000000;
   word-break: keep-all;
   transition: top ease 0.5s;
   cursor: pointer;
 }
 .button-answer:active {
-  box-shadow: inset -0.2vh -0.2vh 0.6vh rgba(255, 255, 255, 0.7),
-    inset -0.2vh -0.2vh 0.4vh rgba(255, 255, 255, 0.5),
-    inset 0.2vh 0.2vh 0.2vh rgba(255, 255, 255, 0.075),
-    inset 0.2vh 0.2vh 0.4vh rgba(0, 0, 0, 0.15);
-}
-
-.result-button-to-home {
-  width: 20vw;
-  height: 5vh;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 1vh;
-
-  justify-content: center;
-  align-items: center;
-  border-radius: 5vh;
-  border-width: 0px;
-  background-color: #8b0029;
-  box-shadow: 0vh 0.5vh 2vh 0vh #8b002a93;
-  font-size: 1.5vh;
-  color: white;
-  font-weight: 700;
-  transition: top ease 0.5s;
-  cursor: pointer;
-}
-.result-button-to-home:active {
-  background-color: #680120;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 @keyframes biggerBox {
@@ -128,4 +106,35 @@
   -webkit-user-select: none;
   -khtml-user-select: none;
   user-select: none;
+}
+@font-face {
+  font-family: "BMDOHYEON";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+p {
+  font-family: "BMDOHYEON";
+}
+h1 {
+  font-family: "BMDOHYEON";
+}
+h2 {
+  font-family: "BMDOHYEON";
+}
+h3 {
+  font-family: "BMDOHYEON";
+}
+h4 {
+  font-family: "BMDOHYEON";
+}
+h5 {
+  font-family: "BMDOHYEON";
+}
+h6 {
+  font-family: "BMDOHYEON";
+}
+button {
+  font-family: "BMDOHYEON";
 }
