--- a/src/routes/result/result.styles.scss
+++ b/src/routes/result/result.styles.scss
@@ -1,19 +1,27 @@
 .result-background {
   height: 100vh;
-  background-color: #d6cbbd;
+  background-image: url("../../assets/bg6.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: block;
+}
+.result-character {
+  position: relative;
+  width: 40vw;
+  top: 8vh;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .result-box {
   width: 90vw;
-  height: 60vh;
+  height: 45vh;
   background-color: rgb(240, 240, 240);
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 2vh;
   margin: auto;
   border-radius: 4vh;
-  padding-top: 50px;
+  padding-top: 20px;
   padding-bottom: 50px;
   box-shadow: 0vh 2vh 3vh 0vh rgba(0, 0, 0, 0.2);
 }
@@ -23,146 +31,70 @@
 }
 .result-title-container {
   display: flex;
-  justify-content: center;
 }
 .result-top-text {
-  color: #8b0029;
-  font-size: 1.5vh;
-  font-weight: 700;
-  text-align: center;
-  margin-left: 5vw;
-  margin-right: 5vw;
+  color: #f8de69;
+  font-size: 2vh;
+  margin-left: 7vw;
   word-break: keep-all;
 }
 .result-title {
-  color: #8b0029;
-  font-size: 4vh;
-  font-weight: 700;
-  text-align: center;
+  color: #000000;
+  font-size: 3vh;
+  margin-left: 7vw;
   margin-bottom: 0.5vh;
 }
 .result-subhead {
   color: black;
-  font-size: 2vh;
-  text-align: center;
-  margin-bottom: 5vh;
-  margin-left: 5vw;
-  margin-right: 5vw;
+  font-size: 1.4vh;
+  margin-bottom: 3vh;
+  margin-left: 7vw;
+  margin-right: 7vw;
   word-break: keep-all;
+}
+.result-paragraph-top {
+  color: #d8615a;
+  font-size: 1.8vh;
+  margin-left: 7vw;
+  margin-right: 7vw;
+  word-break: keep-all;
+  line-height: 150%;
 }
 .result-paragraph {
   color: black;
-  font-size: 1.5vh;
-  margin-bottom: 5vh;
-  margin-left: 10vw;
-  margin-right: 10vw;
+  font-size: 1.6vh;
+  margin-left: 7vw;
+  margin-right: 7vw;
+  word-break: keep-all;
+  line-height: 150%;
+}
+.result-club-top {
+  color: black;
+  font-size: 1.6vh;
+  margin-left: 7vw;
+  margin-right: 7vw;
+  margin-top: 3vh;
   word-break: keep-all;
   line-height: 150%;
 }
 
-.result-buttons-container {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-.result-button-to-home {
-  width: 20vw;
-  height: 5vh;
-  position: relative;
-  margin-top: 1vh;
-
-  justify-content: center;
-  align-items: center;
-  border-radius: 5vh;
-  border-width: 0px;
-  background-color: #8b0029;
-  box-shadow: 0vh 0.5vh 2vh 0vh #8b002a93;
-  font-size: 1.5vh;
-  color: white;
-  font-weight: 700;
-  transition: top ease 0.5s;
-  cursor: pointer;
-}
-.result-button-to-home:active {
-  background-color: #680120;
-}
-
-.result-button-share {
-  width: 20vw;
-  height: 5vh;
-  position: relative;
-  margin-top: 1vh;
-  margin-left: 3vw;
-
-  justify-content: center;
-  align-items: center;
-  border-radius: 5vh;
-  border-width: 0px;
-  background-color: #8b0029;
-  box-shadow: 0vh 0.5vh 2vh 0vh #8b002a93;
-  font-size: 1.5vh;
-  color: white;
-  font-weight: 700;
-  transition: top ease 0.5s;
-  cursor: pointer;
-}
-.result-button-share:active {
-  background-color: #680120;
-}
-
-.kuplace-button-container {
-  text-align: center;
-  margin-top: 2vh;
-}
-
-.button-kuplace {
-  width: 43vw;
-  height: 5vh;
-
-  justify-content: center;
-  align-items: center;
-  border-radius: 1.5vh;
-  border-width: 0px;
-  background-color: rgb(240, 240, 240);
-  border-color: #ff445e;
-  box-shadow: -0.6vh -0.6vh 1.4vh rgba(255, 255, 255, 0.7),
-    -0.6vh -0.6vh 1vh rgba(255, 255, 255, 0.5),
-    0.6vh 0.6vh 0.8vh rgba(255, 255, 255, 0.075),
-    0.6vh 0.6vh 1vh rgba(0, 0, 0, 0.15);
-  font-size: 1.5vh;
-  color: #ff445e;
-  font-weight: 700;
-  word-break: keep-all;
-  transition: top ease 0.5s;
-  cursor: pointer;
-}
-.button-kuplace:active {
-  box-shadow: inset -0.2vh -0.2vh 0.6vh rgba(255, 255, 255, 0.7),
-    inset -0.2vh -0.2vh 0.4vh rgba(255, 255, 255, 0.5),
-    inset 0.2vh 0.2vh 0.2vh rgba(255, 255, 255, 0.075),
-    inset 0.2vh 0.2vh 0.4vh rgba(0, 0, 0, 0.15);
-}
-
-.result-button-developer {
-  position: fixed;
+.result-button-home {
+  color: #000000;
+  position: absolute;
+  text-align: center !important ;
+  font-size: 1.3vh;
+  transform: translate(-50%);
+  left: 50%;
   bottom: 5vh;
-  text-align: center !important ;
-  font-size: 1.7vh;
-  font-weight: 500;
-  transform: translate(-50%, -50%);
-  left: 50%;
   cursor: pointer;
 }
-
-.text-reference {
-  position: fixed;
-  bottom: 2vh;
+.result-button-developer {
+  position: absolute;
   text-align: center !important ;
-  font-size: 1vh;
-  font-weight: 500;
-  color: rgba(0, 0, 0, 0.5);
-  transform: translate(-50%, -50%);
+  font-size: 1.3vh;
+  transform: translate(-50%);
   left: 50%;
+  bottom: 2vh;
   cursor: pointer;
 }
 
@@ -183,4 +115,36 @@
   -webkit-user-select: none;
   -khtml-user-select: none;
   user-select: none;
+}
+
+@font-face {
+  font-family: "BMDOHYEON";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+p {
+  font-family: "BMDOHYEON";
+}
+h1 {
+  font-family: "BMDOHYEON";
+}
+h2 {
+  font-family: "BMDOHYEON";
+}
+h3 {
+  font-family: "BMDOHYEON";
+}
+h4 {
+  font-family: "BMDOHYEON";
+}
+h5 {
+  font-family: "BMDOHYEON";
+}
+h6 {
+  font-family: "BMDOHYEON";
+}
+button {
+  font-family: "BMDOHYEON";
 }
