--- a/src/routes/page/page.styles.scss
+++ b/src/routes/page/page.styles.scss
@@ -19,6 +19,20 @@
   background-size: cover;
   display: block;
 }
+.page4 {
+  height: 100vh;
+  background-image: url("../../assets/pg4.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: block;
+}
+.page5 {
+  height: 100vh;
+  background-image: url("../../assets/pg5.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: block;
+}
 @font-face {
   font-family: "BMDOHYEON";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
